css: fix long usernames in comments not word wrapping.
Ex: https://danbooru.donmai.us/posts/4206#comment_1954688.

--- a/app/javascript/src/styles/common/messages.scss
+++ b/app/javascript/src/styles/common/messages.scss
@@ -14,6 +14,7 @@ div.list-of-messages {
     div.author {
       flex-basis: 12em;
       margin-right: 1em;
+      min-width: 0;
 
       a.message-timestamp {
         font-style: italic;
